aggiunti css e js di foundation

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 /runtime/
 /nbproject/private/
 /.settings
+/.sass-cache
 nbproject/project.properties
 nbproject/project.xml
 .project
-
+config.rb
