escluso file di test

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ config.rb
 /protected/messages/en/en.controllers.lang.php
 /protected/messages/it/it.controllers.lang.php
 /protected/messages/it/it.views.lang.php
+/protected/views/site/test.php
