ignorato file vecchia versione da copiare

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ config.rb
 /protected/messages/it/it.controllers.lang.php
 /protected/messages/it/it.views.lang.php
 /protected/views/site/test.php
+/protected/controllers/LoveControlleFake.php
